--- a/public_html/media/style.css
+++ b/public_html/media/style.css
@@ -178,6 +178,8 @@ li a:hover:not(.active) {
     background-color: rgba(255, 0, 0, 0.8);
     padding: 5px;
     margin-inline-start: auto;
+    margin-top: 0;
+    margin-bottom: 0;
     width: 100px;
     color: aliceblue;
     text-decoration: line-through solid aliceblue;
