--- a/public_html/media/style.css
+++ b/public_html/media/style.css
@@ -35,6 +35,7 @@ td,
 th,
 table {
     border: 1px dashed grey;
+    margin: auto;
 }
 
 td,
@@ -52,12 +53,6 @@ form {
     align-items: center;
 }
 
-/*label{*/
-/*    display: flex;*/
-/*    flex-direction: column;*/
-/*    width: 400px;*/
-/*    margin-bottom: 5px;*/
-/*}*/
 input,
 textarea,
 select {
